# discord-overseerr

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
.github/: copilot-instructions.md
.github/workflows/: auto-release.yml  docker-build.yml  tests.yml
bot/: __init__.py  main.py  notifications.py  overseerr.py  settings.py
bot/cogs/: __init__.py  movie_commands.py
docs/: python.md  test-coverage-gaps.md  testing.md
tests/: __init__.py  conftest.py  test_integration.py  test_main.py  test_movie_commands.py  test_notifications.py  test_overseerr.py  test_settings.py
